[package]
name = "lambda_test_001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
lambda_runtime = "0.7.3"
serde = "1.0.156"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros"] }
